--- a/root/index.html
+++ b/root/index.html
@@ -29,5 +29,7 @@
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1>The biggest startup event of the year</h1>
+  </body>
 </html>
