Change background image

--- a/root/index.html
+++ b/root/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
   <head>
     <title>Startup</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
@@ -27,7 +23,7 @@
     />
 
     <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>The biggest startup event of the year</h1>
