--- a/root/index.html
+++ b/root/index.html
@@ -26,7 +26,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1><strong>The biggest startup event of the year</strong></h1>
+    <h1 class="text-uppercase">
+      <strong>The biggest startup event of the year</strong>
+    </h1>
     <button>Find out more</button>
   </body>
 </html>
