Add div class row

--- a/root/index.html
+++ b/root/index.html
@@ -27,11 +27,13 @@
   </head>
   <body>
     <div class="container"
+        <div class="row"
         <h1 class="text-uppercase">
-          <strong>The biggest startup event of the year</strong>
+        <strong>The biggest startup event of the year</strong>
         </h1>
         <hr />
         <button class="btn btn-primary btn-xl">Find out more</button>
+        </div>
     </div>
   </body>
 </html>
