--- a/root/index.html
+++ b/root/index.html
@@ -26,14 +26,16 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container"
-        <div class="row"
-        <h1 class="text-uppercase">
-        <strong>The biggest startup event of the year</strong>
-        </h1>
+    <div class="container">
+      <div class="row">
+        <header class="text-center">
+          <h1 class="text-uppercase">
+            <strong>The biggest startup event of the year</strong>
+          </h1>
+        </header>
         <hr />
         <button class="btn btn-primary btn-xl">Find out more</button>
-        </div>
+      </div>
     </div>
   </body>
 </html>
