Add section text center for button and horizon line.

--- a/root/index.html
+++ b/root/index.html
@@ -33,8 +33,10 @@
             <strong>The biggest startup event of the year</strong>
           </h1>
         </header>
-        <hr />
-        <button class="btn btn-primary btn-xl">Find out more</button>
+        <section class="text-center">
+          <hr />
+          <button class="btn btn-primary btn-xl">Find out more</button>
+        </section>
       </div>
     </div>
   </body>
