--- a/root/index.html
+++ b/root/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
           <h1 class="text-uppercase">
