--- a/root/index.html
+++ b/root/index.html
@@ -33,7 +33,7 @@
             <strong>The biggest startup event of the year</strong>
           </h1>
         </header>
-        <div class="buffer"></div>
+        <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr />
           <button class="btn btn-primary btn-xl">Find out more</button>
