Add singing page link

--- a/root/index.html
+++ b/root/index.html
@@ -36,7 +36,9 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr />
-          <button class="btn btn-primary btn-xl">Find out more</button>
+          <a href="https://mailchi.mp/e0810fb7a7c9/startup"
+            ><button class="btn btn-primary btn-xl">Find out more</button>
+          </a>
         </section>
       </div>
     </div>
