Updated CSS path

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <!-- My own stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="root/css/style.css" />
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
